--- a/css/solo.css
+++ b/css/solo.css
@@ -1,8 +1,8 @@
 
-@import url('//fonts.googleapis.com/css?family=Lato:300,700');
+@import url('https://fonts.googleapis.com/css2?family=Cherish&display=swap';
 
 html {
-  font: 16px/1.5 Lato, sans-serif;
+  font: 100px/1.5 Cherish, cursive;
   background-color: #a6e5de;
 }
 
@@ -26,7 +26,7 @@ a:hover, a:focus {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Lato, sans-serif;
+  font-family: 'Cherish', cursive;
   margin: 0 0 0.5rem -0.1rem;
   line-height: 1,5;
   color: #111;
