--- a/css/solo.css
+++ b/css/solo.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Cherish';
+@import url('//fonts.googleapis.com/css2?family=Cherish';
 
 html {
   font: 100px/1.5 Cherish, cursive;
