--- a/css/solo.css
+++ b/css/solo.css
@@ -1,5 +1,5 @@
 
-@import url('//fonts.googleapis.com/css2?family=Cherish';
+@import url('//fonts.googleapis.com/css2?family=Cherish:400';
 
 html {
   font: 30px/1.5 Cherish, cursive;
