--- a/css/solo.css
+++ b/css/solo.css
@@ -1,32 +1,16 @@
 
-@import url('//fonts.googleapis.com/css2?family=Cherish:400';
+@import url('//fonts.googleapis.com/css?family=Lato:300,700');
 
 html {
-  font: 30px/1.5 Cherish, cursive;
+  font: 16px/1.5 Lato, sans-serif;
   background-color: #a6e5de;
 }
 
-@media (min-width: 30rem) {
-  html {
-    font-size: 20px;
-  }
-}
-
-body {
-  color: #333;
-}
-
-a {
-  color: #0074d9; /* From http://clrs.cc */
-  text-decoration: none;
-}
-
-a:hover, a:focus {
-  text-decoration: underline;
+	@@ -26,7 +26,7 @@ a:hover, a:focus {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Cherish', cursive;
+  font-family: Lato, sans-serif;
   margin: 0 0 0.5rem -0.1rem;
   line-height: 1,5;
   color: #111;
