--- a/css/solo.css
+++ b/css/solo.css
@@ -1,8 +1,8 @@
 
-@import url('//fonts.googleapis.com/css?family=Lato:300,700');
+@import url('////fonts.googleapis.com/css2?family=Cherish:400');
 
 html {
-  font: 16px/1.5 Lato, sans-serif;
+  font: 16px/1.5 Cherish, cursive;
   background-color: #a6e5de;
 }
 
@@ -10,7 +10,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Lato, sans-serif;
+  font-family: Cherish, cursive;
   margin: 0 0 0.5rem -0.1rem;
   line-height: 1,5;
   color: #111;
