--- a/css/solo.css
+++ b/css/solo.css
@@ -3,7 +3,7 @@
 
 html {
   font: 16px/1.5 Cherish, cursive;
-  background-color: #a6e5de;
+  background-color: #ffffff;
 }
 
 	@@ -26,7 +26,7 @@ a:hover, a:focus {
