--- a/css/solo.css
+++ b/css/solo.css
@@ -1,5 +1,5 @@
 
-@import url('////fonts.googleapis.com/css2?family=Cherish:400');
+@import url('//fonts.googleapis.com/css2?family=Cherish&display=swap');
 
 html {
   font: 16px/1.5 Cherish, cursive;
