--- a/css/solo.css
+++ b/css/solo.css
@@ -1,8 +1,8 @@
 
-@import url('//fonts.googleapis.com/css2?family=Cherish&display=swap');
+@import url('//fonts.googleapis.com/css2?family=EB+Garamond:wght@400;800&display=swap');
 
 html {
-  font: 16px/1.5 Cherish, cursive;
+  font: 16px/1.5 EB Garamond, serif;
   background-color: #ffffff;
 }
 
@@ -10,7 +10,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Cherish, cursive;
+  font-family: 'EB Garamond', serif;
   margin: 0 0 0.5rem -0.1rem;
   line-height: 1,5;
   color: #111;
