--- a/css/solo.css
+++ b/css/solo.css
@@ -1,8 +1,8 @@
 
-@import url('//fonts.googleapis.com/css2?family=EB+Garamond:wght@400;800&display=swap');
+@import url('//fonts.googleapis.com/css2?family=Poppins:wght@200;900&display=swap');
 
 html {
-  font: 16px/1.5 EB Garamond, serif;
+  font: 16px/1.5 Poppins, sans-serif;
   background-color: #ffffff;
 }
 
@@ -10,10 +10,10 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'EB Garamond', serif;
+  font-family: 'Poppins', sans-serif;
   margin: 0 0 0.5rem -0.1rem;
   line-height: 1,5;
-  color: #111;
+  color: #3b5246;
 }
 
 h1 {
@@ -22,7 +22,7 @@ h1 {
   font-size: 2rem;
   margin-bottom: 1rem;
   line-height: 1;
-  color: #ff6833;
+  color: #3b5246;
 }
 
 @media (min-width: 30rem) {
