--- a/css/solo.css
+++ b/css/solo.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif;
   margin: 0 0 0.5rem -0.1rem;
   line-height: 1,5;
-  color: #826482;
+  color: #8f0e0e;
 }
 
 h1 {
