--- a/css/solo.css
+++ b/css/solo.css
@@ -22,7 +22,7 @@ h1 {
   font-size: 2rem;
   margin-bottom: 1rem;
   line-height: 1;
-  color: #3b5246;
+  color: #de4747;
 }
 
 @media (min-width: 30rem) {
